[package]
name = "mini-redis-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = [
    'rt',
    'rt-multi-thread',
    'macros',
    'fs',
] }
