[package]
name = "mini-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
hyper = "1.10.1"
log = "0.4.29"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = [
    'rt',
    'rt-multi-thread',
    'macros',
    'fs',
    "io-util",
    "sync",
    "time",
    "signal",
    "net",
    "bytes",
] }
tokio-util = "0.7.18"
tower = "0.5.3"

